--- a/.github/workflows/cd_uat.yml
+++ b/.github/workflows/cd_uat.yml
@@ -1,74 +1,52 @@
 name: Build, deploy to GCR
 on:
   push:
-    # branches: [ master, staging, develop, release/* ]
-    tags:
-      - "*"
+    branches:
+      - master
 
 env:
-  PROJECT_ID: ${{ secrets.PROJECT_EU }}
+  PROJECT_ID: ${{ secrets.PROJECT_SHARED }}
   GITHUB_SHA: ${{ github.sha }}
   GITHUB_REF: ${{ github.ref }}
   ORG: roava.io/services
   IMAGE: ms.api
-  REGISTRY_HOSTNAME: eu.gcr.io/${{ secrets.PROJECT_EU }}
+  REGISTRY_HOSTNAME: eu.gcr.io/${{ secrets.PROJECT_SHARED }}
 
 jobs:
-  # The "lint" workflow
   lint:
     name: Lint
-
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      - name: ENV
+        run: env
       # Setup Go
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
           go-version: ^1.15 # The Go version to download (if necessary) and use.
-
-      # # cache go modules
-      # - name: Cache go modules
-      #   uses: actions/cache@v1
-      #   with:
-      #     path: ~/go/pkg/mod
-      #     key: ${{ runner.os }}-go-${{ hashFiles('go.sum') }}
-      #     restore-keys: ${{ runner.os }}-go-
-
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Check out code
         uses: actions/checkout@v2
-
+      # Set credentials to get zebra library
       - name: Setup credentials to access private repo
         run: git config --global url."https://${{ secrets.PAT }}:x-oauth-basic@github.com/".insteadOf "https://github.com/"
-      # Install all the dependencies
-      - name: Get and verify dependencies
-        env:
-          GOSUMDB: "off"
-          GOPROXY: "direct"
-        run: go mod download && go mod verify
-
       # Run fmt of code
       - name: check formatting
         run: make fmt-check
-
       # Run vet & lint on the code
       - name: Run code vet
         run: make vet
-
       # Run vet & lint on the code
       - name: Run code lint
         run: make lint
 
-  # The "TEST" workflow
   test:
     name: Test
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     needs: [lint] # Only run this workflow when "lint" workflow succeeds
-
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Setup Go
@@ -76,34 +54,21 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: ^1.15 # The Go version to download (if necessary) and use.
-
-      # # cache go modules
-      # - name: Cache go modules
-      #   uses: actions/cache@v1
-      #   with:
-      #     path: ~/go/pkg/mod
-      #     key: ${{ runner.os }}-go-${{ hashFiles('go.sum') }}
-      #     restore-keys: ${{ runner.os }}-go-
-
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: Setup credentials to access private repo
-        run: git config --global url."https://${{ secrets.PAT }}:x-oauth-basic@github.com/".insteadOf "https://github.com/"
-
       - name: Check out code
         uses: actions/checkout@v2
-
+      # Set credentials to get zebra library
+      - name: Setup credentials to access private repo
+        run: git config --global url."https://${{ secrets.PAT }}:x-oauth-basic@github.com/".insteadOf "https://github.com/"
       # Run unit tests + coverage
       - name: Run unit tests
         run: make test
 
-  # The "TEST" workflow
   build:
     name: Build
-
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     needs: [lint, test]
-
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Setup Go
@@ -111,18 +76,17 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: ^1.15 # The Go version to download (if necessary) and use.
-
-          # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Check out code
         uses: actions/checkout@v2
-
+      # Set credentials to get zebra library
       - name: Setup credentials to access private repo
         run: git config --global url."https://${{ secrets.PAT }}:x-oauth-basic@github.com/".insteadOf "https://github.com/"
-        # Run build of the application
+      # Run build of the application
       - name: Run build
         run: go build .
 
-  deploy:
+  package:
     name: Setup, Build, and Deploy
     runs-on: ubuntu-latest
     needs: [build] # Only run this workflow when "build" workflow succeeds
@@ -130,7 +94,7 @@ jobs:
     steps:
       - name: Get the version
         id: get_version
-        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
+        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/heads\//}
 
       - name: Get short commit id
         id: vars
@@ -146,22 +110,21 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      # Setup gcloud CLI
-      - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+      - name: Setup gcloud CLI
+        uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
         with:
           version: "290.0.1"
-          service_account_key: ${{ secrets.SA_EU }}
-          project_id: ${{ secrets.PROJECT_EU }}
+          service_account_key: ${{ secrets.SA_SHARED }}
+          project_id: ${{ secrets.PROJECT_SHARED }}
 
-      # Configure docker to use the gcloud command-line tool as a credential helper
-      - run: |
+      - name: Configure docker
+        run: |
           # Set up docker to authenticate
           # via gcloud command-line tool.
           gcloud auth configure-docker
 
-      # Build the Docker image
       # images name in format - [ORG]/[IMAGE] e.g. roava.io/myimage
-      - name: Build
+      - name: Build the Docker image
         id: build
         run: |
           export TAG=`echo ${{ steps.get_version.outputs.VERSION }}`
@@ -172,13 +135,25 @@ jobs:
             --build-arg GITHUB_SHA="$GITHUB_SHA" \
             --build-arg ACCESS_TOKEN="${{ secrets.PAT }}" \
             --build-arg GITHUB_REF="$GITHUB_REF" .
+          docker tag "$REGISTRY_HOSTNAME"/"$CONTAINER":"$TAG" "$REGISTRY_HOSTNAME"/"$CONTAINER":latest
 
-      # Push the Docker image to Google Container Registry
-      # images name in format - [ORG]/[IMAGE] e.g. roava.io/myimage
-      # docker push "$REGISTRY_HOSTNAME"/"$CONTAINER":"$GITHUB_SHA"
       - name: Publish
         id: publish
         run: |
           export TAG=`echo ${{ steps.get_version.outputs.VERSION }}`
           export CONTAINER=`echo $ORG/$IMAGE`
           docker push "$REGISTRY_HOSTNAME"/"$CONTAINER":"$TAG"
+          docker push "$REGISTRY_HOSTNAME"/"$CONTAINER":latest
+
+  deploy:
+    name: Deploy to UAT
+    runs-on: [self-hosted, linux, x64, uat]
+    needs: [package]
+
+    steps:
+      - name: Deploy service
+        run: |
+          export SERVICE_NAME=`echo $GITHUB_REPOSITORY | cut -d'/' -f2`
+          export VERSION_NAME=`echo $GITHUB_REF | cut -d'/' -f3`
+          deploy "${SERVICE_NAME}" "${VERSION_NAME}"
+
